--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 <body>
     <h1> Click the below buttons to know about your vechicle </h1>
     <h3> the vechicle detail below are new version cars of the brand </h3>
-    <a href="content/toyota.html"> <button class="button"> TOYOTA </button> </a>
-    <a href="content/tesla.html"><button class="button"> TESLA</button></a>
-    <a href="content/ford.html"><button class="button"> FORD</button></a>
-    <a href="content/bmw.html"><button class="button"> BMW </button></a>
-    <a href="content/rolls.html"><button class="button"> ROLLS ROYCE </button></a>
-    <a href="content/benz.html"><button class="button"> BENZ </button></a>
+    <a href="toyota.html"> <button class="button"> TOYOTA </button> </a>
+    <a href="tesla.html"><button class="button"> TESLA</button></a>
+    <a href="ford.html"><button class="button"> FORD</button></a>
+    <a href="bmw.html"><button class="button"> BMW </button></a>
+    <a href="rolls.html"><button class="button"> ROLLS ROYCE </button></a>
+    <a href="benz.html"><button class="button"> BENZ </button></a>
     <button class="button"> JAGUAR </button>
     <button class="button"> HONDA</button>
     <button class="button"> VOLKSWAGEN </button>
